--- a/sock2/Makefile
+++ b/sock2/Makefile
@@ -2,7 +2,8 @@ CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror 
 Name = food.ma
 
-SRC = main.cpp src/config.cpp src/paths.cpp src/infra.cpp src/server.cpp src/utils.cpp src/client.cpp src/location.cpp
+SRC = main.cpp src/config.cpp src/paths.cpp src/infra.cpp src/server.cpp src/utils.cpp src/client.cpp src/location.cpp \
+		../Response/GetHandler.cpp ../Response/Response.cpp ../Request/Request.cpp ../Request/ParseRequest.cpp ../Response/main2.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
