--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -7,7 +7,7 @@ server {
         upload /nfs/homes/again/upload/;
         autoindex on;
         http_methods POST;
-        root /nfs/homes/again/   ; 
+        root /Users/sel-jama/Desktop/web   ; 
         cgi php /usr/bin/php-cgi;
         cgi py /usr/bin/python3;
         return 301 /mok.png;
