--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -4,9 +4,9 @@ server {
 
     
     location / {
-        upload /nfs/homes/again/upload/;
+        http_methods GET POST;
+        upload on;
         autoindex on;
-        http_methods POST;
         root /Users/sel-jama/Desktop/web   ; 
         cgi php /usr/bin/php-cgi;
         cgi py /usr/bin/python3;
