commited from youness

--- a/sock2/Makefile
+++ b/sock2/Makefile
@@ -1,5 +1,5 @@
 CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -fsanitize=address
+CXXFLAGS = -Wall -Wextra -Werror 
 Name = food.ma
 
 SRC = main.cpp src/config.cpp src/paths.cpp src/infra.cpp src/server.cpp src/utils.cpp src/client.cpp src/location.cpp \
