--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -4,10 +4,10 @@ server {
 
     
     location / {
-        upload /Users/sel-jama/Desktop/web/upload/Hooray.jpeg;
+        upload /Users/yboucha/Desktop/with_request/upload;
         autoindex on;
         http_methods POST;
-        root /Users/sel-jama/Desktop/web   ; 
+        root /Users/yboucha/Desktop/with_request  ; 
         cgi php /usr/bin/php-cgi;
         cgi py /usr/bin/python3;
         return 301 /mok.png;
