--- a/sock2/configfiles/configfile.conf
+++ b/sock2/configfiles/configfile.conf
@@ -4,7 +4,7 @@
     server_name localhost
     location
         location_name /
-        upload /nfs/homes/lsadiq/again/upload/
+        upload //
         autoindex on
         http_methods POST GET DELETE 
         root /nfs/homes/lsadiq/again/    
@@ -12,9 +12,9 @@
         cgi py /usr/bin/python3
     location
         location_name /red
-        upload /nfs/homes/lsadiq/again/upload/
+        upload //
         autoindex on
         http_methods POST GET DELETE
-        root /nfs/homes/lsadiq/again/upload/
+        root //
         cgi py /usr/bin/python3
         return 301 /mok.png
