commited from youness

--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -1,15 +1,47 @@
 server {
     listen 127.0.0.1:50000;
     server_name 127.0.0.1;
-
-    
+    # index test;
+    client_max_body_size 10000000;
     location / {
-        upload /Users/sel-jama/Desktop/web/upload;
-        autoindex on;
+        upload on;
+        upload_path /Users/yboucha/Desktop/with_request/upload;
+       autoindex on;
         http_methods POST;
-        root /Users/sel-jama/Desktop/web  ; 
+                http_methods POST;
+
+        root /Users/yboucha/Desktop/with_request; 
         cgi php /usr/bin/php-cgi;
         cgi py /usr/bin/python3;
-        return 301 /mok.png;
+        return 301 http://127.0.0.1:50000:/anotherLocation;
+            index test;
+    index test2 index.php script.py;
+    index test3;
+#return nor obligatoir 
+#
     }
+    #error page 5arej location , not obligatoir ok
+    #upload path , 1 only and no dup , set the upload to off if nothing given
 }
+# server {
+#     listen 127.0.0.1:50000;
+#     server_name 127.0.0.1;
+#     # index test;
+#     client_max_body_size 10000000;
+#     location / {
+#         upload /nfs/homes/again/upload/;
+#        autoindex on;
+#         http_methods POST;
+#                 http_methods POST;
+
+#         root /Users/sel-jama/Desktop/web; 
+#         cgi php /usr/bin/php-cgi;
+#         cgi py /usr/bin/python3;
+#         return 301 /mok.png;
+#             index test;
+#     index test2;
+#     index test3;
+
+#     }
+# }
+
