--- a/sock2/Makefile
+++ b/sock2/Makefile
@@ -4,7 +4,7 @@ Name = Webserver
 
 SRC = main.cpp src/config.cpp src/paths.cpp src/infra.cpp src/server.cpp src/utils.cpp src/client.cpp src/location.cpp \
 		../Response/method.cpp ../Response/Response.cpp ../Request/Request.cpp ../Request/ParseRequest.cpp ../post/post.cpp \
-		../error/errorPage.cpp
+		../error/errorPage.cpp ../cgi/handleCgi.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
