--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -13,6 +13,8 @@ server {
         root /Users/sel-jama/Desktop/web; 
         cgi php /usr/bin/php-cgi;
         cgi py /usr/bin/python3;
+        cgi c /usr/bin/gcc;
+        cgi cpp /usr/bin/c++;
         return 301 http://127.0.0.1:50000:/anotherLocation;
             index test;
     index test2 index.php script.py;
