--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -8,7 +8,7 @@ server {
         upload_path /Users/sel-jama/Desktop/web/upload;
        autoindex on;
         http_methods POST;
-                http_methods POST;
+                http_methods POST GET;
 
         root /Users/sel-jama/Desktop/web; 
         cgi php /usr/bin/php-cgi;
