--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -5,17 +5,17 @@ server {
     client_max_body_size 10000000;
     location / {
         upload on;
-        upload_path /Users/yboucha/Desktop/workplace/upload;
+        upload_path /Users/sel-jama/Desktop/Webserv/upload;
        autoindex on;
         http_methods POST;
                 http_methods POST GET;
 
-        root /Users/yboucha/Desktop/workplace; 
+        root /Users/sel-jama/Desktop/Webserv;
         cgi php /usr/bin/php-cgi;
         cgi py /usr/bin/python3;
         return 301 http://127.0.0.1:50000:/anotherLocation;
             index test;
-    index test2 index.php script.py;
+    index test2 index.php script.py index.html;
     index test3;
 #return nor obligatoir 
 #
