--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -20,6 +20,16 @@ server {
 #return nor obligatoir 
 #
     }
+
+    location /images {
+        root /Users/sel-jama/Desktop/Webserv;
+        autoindex off;
+        http_methods  GET;
+        # index index.html;
+        # error_pages 404  404.html
+        # index ndjjkf index1.html index2.html;
+    }
+
     #error page 5arej location , not obligatoir ok
     #upload path , 1 only and no dup , set the upload to off if nothing given
 }
