--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -27,7 +27,7 @@
 
 server {
     listen 127.0.0.1:50000;
-    server_name 127.0.0.1;
+    server_name 127.0.0.2;
     # index test;
     client_max_body_size 10000000;
     location / {
@@ -52,8 +52,9 @@ server {
         root /Users/sel-jama/Desktop/Webserv;
         autoindex off;
         http_methods  GET;
-        # index index.html;
-        # error_pages 404  404.html
+        index index.html;
+        # error_page 404 404.html;
+        # error_p÷age
         # index ndjjkf index1.html index2.html;
     }
 
@@ -72,7 +73,7 @@ server {
 #         http_methods POST;
 #                 http_methods POST;
 
-#         root /Users/sel-jama/Desktop/web; 
+#         root /Users/sel-jama/Desktop/Webserv/images; 
 #         cgi php /usr/bin/php-cgi;
 #         cgi py /usr/bin/python3;
 #         return 301 /mok.png;
