--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -53,10 +53,10 @@ server {
         autoindex off;
         http_methods  GET;
         index index.html;
-        # error_page 404 404.html;
         # error_p÷age
         # index ndjjkf index1.html index2.html;
     }
+        error_page 404 404.html;
 
     #error page 5arej location , not obligatoir ok
     #upload path , 1 only and no dup , set the upload to off if nothing given
