--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -32,12 +32,12 @@ server {
     client_max_body_size 10000000;
     location / {
         upload on;
-        upload_path /Users/yboucha/Desktop/cloned/upload;
+        upload_path /goinfre/yboucha/cloned/upload;
        autoindex on;
         http_methods POST;
                 http_methods POST GET;
 
-        root /Users/yboucha/Desktop/cloned;
+        root /goinfre/yboucha/cloned;
         cgi php /usr/bin/php-cgi;
         cgi py /usr/bin/python3;
         return 301 http://127.0.0.1:50000:/anotherLocation;
