--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -10,47 +10,47 @@ server {
         http_methods POST;
         http_methods POST GET;
         root /Users/sel-jama/Desktop/Webserv;
-        cgi php /usr/bin/php-cgi;
+        cgi php /Users/sel-jama/Desktop/php-cgi;
         cgi py /usr/bin/python3;
-        # return http://127.0.0.1:50000:/anotherLocation;
+        # return 301 http://127.0.0.1:50000:/anotherLocation;
         # index test;
         # index test2 index.php script.py index.html;
         # index test3;
     }
 
-    location /anotherLocation {
-        root /Users/sel-jama/Desktop/Webserv;
-        autoindex off;
-        http_methods  GET;
-        index index.html;
-    }
-        error_page 404 404.html;
-}
-
-server {
-    listen 127.0.0.1:50000;
-    server_name server;
-    client_max_body_size 10000000;
-    location / {
-        upload on;
-        upload_path /Users/sel-jama/Desktop/Webserv/upload;
-        autoindex on;
-        http_methods POST;
-        http_methods POST GET;
-        root /Users/sel-jama/Desktop/Webserv;
-        cgi php /usr/bin/php-cgi;
-        cgi py /usr/bin/python3;
-        return 301 http://127.0.0.1:50000:/anotherLocation;
-        index test;
-        index test2 index.php script.py index.html;
-        index test3;
-    }
-
     location /images {
-        root /Users/sel-jama/Desktop/120;
-        autoindex off;
+        root /Users/sel-jama/Desktop/Webserv;
+        autoindex on;
         http_methods  GET;
         index index.html;
     }
         error_page 404 404.html;
 }
+
+# server {
+#     listen 127.0.0.1:50000;
+#     server_name server;
+#     client_max_body_size 10000000;
+#     location / {
+#         upload on;
+#         upload_path /Users/sel-jama/Desktop/Webserv/upload;
+#         autoindex on;
+#         http_methods POST;
+#         http_methods POST GET;
+#         root /Users/sel-jama/Desktop/Webserv;
+#         cgi php /usr/bin/php-cgi;
+#         cgi py /usr/bin/python3;
+#         return 301 http://127.0.0.1:50000:/anotherLocation;
+#         index test;
+#         index test2 index.php script.py index.html;
+#         index test3;
+#     }
+
+#     location /images {
+#         root /Users/sel-jama/Desktop/Webserv;
+#         autoindex off;
+#         http_methods  GET;
+#         index index.html;
+#     }
+#         error_page 404 404.html;
+# }
