--- a/Request/MIME.conf
+++ b/Request/MIME.conf
@@ -3,6 +3,7 @@ text/css .css
 text/xml .xml
 image/gif .gif
 image/jpeg .jpeg
+image/jpeg .jpg
 application/javascript .js
 application/atom+xml .atom
 application/rss+xml .rss
