--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -5,12 +5,12 @@ server {
     client_max_body_size 10000000;
     location / {
         upload on;
-        upload_path /Users/sel-jama/Desktop/Webserv/upload;
+        upload_path /nfs/homes/sel-jama/Desktop/Webserv/upload;
         autoindex on;
         http_methods POST;
         http_methods POST GET;
-        root /Users/sel-jama/Desktop/Webserv;
-        cgi php /Users/sel-jama/Desktop/php-cgi;
+        root /nfs/homes/sel-jama/Desktop/Webserv;
+        cgi php /usr/bin/php-cgi;
         cgi py /usr/bin/python3;
         # return 301 http://127.0.0.1:50000:/anotherLocation;
         # index test;
@@ -19,7 +19,7 @@ server {
     }
 
     location /images {
-        root /Users/sel-jama/Desktop/Webserv;
+        root /nfs/homes/sel-jama/Desktop/Webserv;
         autoindex on;
         http_methods  GET;
         index index.html;
@@ -33,11 +33,11 @@ server {
 #     client_max_body_size 10000000;
 #     location / {
 #         upload on;
-#         upload_path /Users/sel-jama/Desktop/Webserv/upload;
+#         upload_path /nfs/homes/sel-jama/Desktop/Webserv/upload;
 #         autoindex on;
 #         http_methods POST;
 #         http_methods POST GET;
-#         root /Users/sel-jama/Desktop/Webserv;
+#         root /nfs/homes/sel-jama/Desktop/Webserv;
 #         cgi php /usr/bin/php-cgi;
 #         cgi py /usr/bin/python3;
 #         return 301 http://127.0.0.1:50000:/anotherLocation;
@@ -47,7 +47,7 @@ server {
 #     }
 
 #     location /images {
-#         root /Users/sel-jama/Desktop/Webserv;
+#         root /nfs/homes/sel-jama/Desktop/Webserv;
 #         autoindex off;
 #         http_methods  GET;
 #         index index.html;
