--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -12,7 +12,7 @@ server {
         root /nfs/homes/sel-jama/Desktop/Webserv;
         cgi php /usr/bin/php-cgi;
         cgi py /usr/bin/python3;
-        # return 301 http://127.0.0.1:50000:/anotherLocation;
+        # return http://127.0.0.1:50000/anotherLocation;
         # index test;
         # index test2 index.php script.py index.html;
         # index test3;
