--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -1,25 +1,24 @@
 
 server {
-    listen 127.0.0.1:50000;
+    listen 127.0.0.1:10000;
     server_name server1;
     client_max_body_size 10000000;
     location / {
         upload on;
-        upload_path /nfs/homes/sel-jama/Desktop/Webserv/upload;
+        upload_path /nfs/homes/yboucha/Downloads/web/upload;
         autoindex on;
-        http_methods POST;
-        http_methods POST GET;
-        root /nfs/homes/sel-jama/Desktop/Webserv;
+        http_methods POST GET DELETE;
+        root /nfs/homes/yboucha/Downloads/web;
         cgi php /usr/bin/php-cgi;
         cgi py /usr/bin/python3;
-        # return http://127.0.0.1:50000/anotherLocation;
+        # return http://127.0.0.1:10000/anotherLocation;
         # index test;
         # index test2 index.php script.py index.html;
         # index test3;
     }
 
     location /images {
-        root /nfs/homes/sel-jama/Desktop/Webserv;
+        root /nfs/homes/yboucha/Downloads/web/135;
         autoindex on;
         http_methods  GET;
         index index.html;
@@ -27,30 +26,30 @@ server {
         error_page 404 404.html;
 }
 
-server {
-    listen 127.0.0.1:50000;
-    server_name server ;
-    client_max_body_size 10000000;
-    location / {
-        upload on;
-        upload_path /nfs/homes/sel-jama/Desktop/Webserv/upload;
-        autoindex on;
-        http_methods POST;
-        http_methods POST GET;
-        root /nfs/homes/sel-jama/Desktop/Webserv;
-        cgi php /usr/bin/php-cgi;
-        cgi py /usr/bin/python3;
-        return 301 http://127.0.0.1:50000:/anotherLocation;
-        index test;
-        index test2 index.php script.py index.html;
-        index test3;
-    }
+# server {
+#     listen 127.0.0.1:20001;
+#     server_name server;
+#     client_max_body_size 10000000;
+#     location / {
+#         upload on;
+#         upload_path /Users/yboucha/Desktop/web/upload;
+#         autoindex on;
+#         http_methods POST;
+#         http_methods POST GET;
+#         root /Users/yboucha/Desktop/web;
+#         cgi php /usr/bin/php-cgi;
+#         cgi py /usr/bin/python3;
+#         return 301 http://127.0.0.1:50000:/anotherLocation;
+#         index test;
+#         index test2 index.php script.py index.html;
+#         index test3;
+#     }
 
-    location /images {
-        root /nfs/homes/sel-jama/Desktop/Webserv;
-        autoindex off;
-        http_methods  GET;
-        index index.html;
-    }
-        error_page 404 404.html;
-}
+#     location /images {
+#         root /Users/yboucha/Desktop/web;
+#         autoindex off;
+#         http_methods  GET;
+#         index index.html;
+#     }
+#         error_page 404 404.html;
+# }
