--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -11,7 +11,7 @@ server {
         root /nfs/homes/sel-jama/Desktop/Webserv;
         cgi php /usr/bin/php-cgi;
         cgi py /usr/bin/python3;
-        # return http://127.0.0.1:10000/anotherLocation;
+        return https://www.youtube.com;
         # index test;
         # index test2 index.php script.py index.html;
         # index test3;
