--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -11,7 +11,7 @@ server {
         root /nfs/homes/sel-jama/Desktop/Webserv;
         cgi php /usr/bin/php-cgi;
         cgi py /usr/bin/python3;
-        return https://www.youtube.com;
+        # return https://www.youtube.com;
         # index test;
         # index test2 index.php script.py index.html;
         # index test3;
@@ -23,7 +23,7 @@ server {
         http_methods  GET;
         index index.html;
     }
-        error_page 404 404.html;
+        error_page 404 /nfs/homes/sel-jama/Desktop/Webserv/error_page/404.html;
 }
 
 # server {
