--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -13,15 +13,15 @@ server {
         cgi py /usr/bin/python3;
         #return https://www.youtube.com;
         # index test;
-        # index test2 index.php script.py index.html;
+        index test2 index.php script.py imagess.html;
         # index test3;
     }
 
     location /images {
-        root /nfs/homes/yboucha/Downloads/web/images;
+        root /nfs/homes/yboucha/Downloads/web/;
         autoindex on;
         http_methods  GET;
-        index index.html;
+        index s.html;
     }
     error_page 404 /nfs/homes/sel-jama/Desktop/Webserv/error_page/404.html;
 }
