--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -1,29 +1,61 @@
-
 server {
     listen 127.0.0.1:10000;
     server_name server1;
     client_max_body_size 10000000;
     location / {
-        upload on;
-        upload_path /nfs/homes/sel-jama/Desktop/Webserv/upload;
+        # upload on;
+        # upload_path /nfs/homes/yboucha/Downloads/web/upload;
         autoindex on;
-        http_methods POST GET DELETE;
-        root /nfs/homes/sel-jama/Desktop/Webserv;
-        cgi php /usr/bin/php-cgi;
-        cgi py /usr/bin/python3;
+        http_methods GET;
+        root /nfs/homes/yboucha/Downloads/;
+        # cgi php /usr/bin/php-cgi;
+        # cgi py /usr/bin/python3;
         #return https://www.youtube.com;
         # index test2 index.php script.py index.html;
         # index test3;
+        # return abde;
     }
 
-    location /images {
-        root /nfs/homes/yboucha/Downloads/web/;
+    location /abde {
+        upload on;
+        upload_path /nfs/homes/yboucha/upload;
+        root /nfs/homes/yboucha/;
         autoindex on;
-        http_methods  GET;
+        http_methods  GET POST DELETE;
         index s.html;
     }
     error_page 404 /nfs/homes/sel-jama/Desktop/Webserv/error_page/404.html;
 }
+
+
+
+
+
+# server {
+#     listen 127.0.0.1:10000;
+#     server_name server1;
+#     client_max_body_size 10000000;
+#     location / {
+#         upload on;
+#         upload_path /nfs/homes/yboucha/Downloads/web/upload;
+#         autoindex on;
+#         http_methods POST GET DELETE;
+#         root /nfs/homes/yboucha/Downloads/web;
+#         cgi php /usr/bin/php-cgi;
+#         cgi py /usr/bin/python3;
+#         #return https://www.youtube.com;
+#         # index test2 index.php script.py index.html;
+#         # index test3;
+#     }
+
+#     location /images {
+#         root /nfs/homes/yboucha/Downloads/web/;
+#         autoindex on;
+#         http_methods  GET;
+#         index s.html;
+#     }
+#     error_page 404 /nfs/homes/sel-jama/Desktop/Webserv/error_page/404.html;
+# }
 
 # server {
 #     listen 127.0.0.1:10000;
