--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -3,11 +3,11 @@ server {
     server_name server1;
     client_max_body_size 10000000;
     location / {
-        # upload on;
-        # upload_path /nfs/homes/yboucha/Downloads/web/upload;
+        upload on;
+        upload_path /nfs/homes/yboucha/Downloads/web/upload;
         autoindex on;
-        http_methods GET;
-        root /nfs/homes/yboucha/Downloads/;
+        http_methods GET POST;
+        root /nfs/homes/yboucha/Downloads/web/;
         # cgi php /usr/bin/php-cgi;
         # cgi py /usr/bin/python3;
         #return https://www.youtube.com;
