--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -4,12 +4,12 @@ server {
     client_max_body_size 10000000;
     location / {
         upload on;
-        upload_path /nfs/homes/yboucha/Downloads/web/upload;
+        upload_path /nfs/homes/sel-jama/Desktop/THE_REQUEST/upload;
         autoindex on;
         http_methods GET POST;
-        root /nfs/homes/yboucha/Downloads/web/;
-        # cgi php /usr/bin/php-cgi;
-        # cgi py /usr/bin/python3;
+        root /nfs/homes/sel-jama/Desktop/THE_REQUEST/;
+        cgi php /usr/bin/php-cgi;
+        cgi py /usr/bin/python3;
         #return https://www.youtube.com;
         # index test2 index.php script.py index.html;
         # index test3;
@@ -18,13 +18,13 @@ server {
 
     location /abde {
         upload on;
-        upload_path /nfs/homes/yboucha/upload;
-        root /nfs/homes/yboucha/;
+        upload_path /nfs/homes/sel-jama/upload;
+        root /nfs/homes/sel-jama/;
         autoindex on;
         http_methods  GET POST DELETE;
         index s.html;
     }
-    error_page 404 /nfs/homes/sel-jama/Desktop/Webserv/error_page/404.html;
+    error_page 404 /nfs/homes/sel-jama/Desktop/THE_REQUEST/error_page/404.html;
 }
 
 
@@ -37,10 +37,10 @@ server {
 #     client_max_body_size 10000000;
 #     location / {
 #         upload on;
-#         upload_path /nfs/homes/yboucha/Downloads/web/upload;
+#         upload_path /nfs/homes/sel-jama/Desktop/Webserv/upload;
 #         autoindex on;
 #         http_methods POST GET DELETE;
-#         root /nfs/homes/yboucha/Downloads/web;
+#         root /nfs/homes/sel-jama/Desktop/Webserv;
 #         cgi php /usr/bin/php-cgi;
 #         cgi py /usr/bin/python3;
 #         #return https://www.youtube.com;
