--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -8,7 +8,7 @@ server {
         autoindex on;
         http_methods GET POST;
         root /nfs/homes/yboucha/Downloads/web/;
-        # cgi php /usr/bin/php-cgi;
+        cgi php /usr/bin/php-cgi;
         # cgi py /usr/bin/python3;
         #return https://www.youtube.com;
         # index test2 index.php script.py index.html;
