--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -4,12 +4,12 @@ server {
     client_max_body_size 10000000;
     location / {
         upload on;
-        upload_path /nfs/homes/yboucha/Downloads/web/upload;
+        upload_path /nfs/homes/sel-jama/Desktop/THE_REQUEST/upload;
         autoindex on;
         http_methods GET POST;
-        root /nfs/homes/yboucha/Downloads/web/;
+        root /nfs/homes/sel-jama/Desktop/THE_REQUEST/;
         cgi php /usr/bin/php-cgi;
-        # cgi py /usr/bin/python3;
+        cgi py /usr/bin/python3;
         #return https://www.youtube.com;
         # index test2 index.php script.py index.html;
         # index test3;
@@ -24,7 +24,7 @@ server {
         http_methods  GET POST DELETE;
         index s.html;
     }
-    error_page 404 /nfs/homes/sel-jama/Desktop/THE_REQUEST/error_page/404.html;
+    error_page 404 /nfs/homes/sel-jama/Desktop/THE_REQUEST/error_pages/404.html;
 }
 
 
