--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -1,5 +1,5 @@
 server {
-    listen 127.0.0.1:10000;
+    listen 127.0.0.1:20000;
     server_name server1;
     client_max_body_size 10000000;
     location / {
@@ -12,7 +12,7 @@ server {
         cgi py /usr/bin/python3;
         #return https://www.youtube.com;
         # index test2 index.php script.py index.html;
-        # index test3;
+        index test1.html;
         # return abde;
     }
 
@@ -28,59 +28,56 @@ server {
 }
 
 
+server {
+    listen 127.0.0.1:10000;
+    server_name server2;
+    client_max_body_size 10000000;
+    location / {
+        upload on;
+        upload_path /nfs/homes/sel-jama/Desktop/Webserv/upload;
+        autoindex on;
+        http_methods POST GET DELETE;
+        root /nfs/homes/sel-jama/Desktop/THE_REQUEST/;
+        cgi php /usr/bin/php-cgi;
+        cgi py /usr/bin/python3;
+        #return https://www.youtube.com;
+        # index test2 index.php script.py index.html;
+        index test2.html;
+    }
 
+    location /images {
+        root /nfs/homes/yboucha/Downloads/web/;
+        autoindex on;
+        http_methods  GET;
+        index s.html;
+    }
+    error_page 404 /nfs/homes/sel-jama/Desktop/Webserv/error_page/404.html;
+}
 
+server {
+    listen 127.0.0.1:10000;
+    server_name server;
+    client_max_body_size 10000000;
+    location / {
+        upload on;
+        upload_path /Users/sel-jama/Desktop/THE_REQUEST/upload;
+        autoindex on;
+        http_methods POST;
+        http_methods POST GET;
+        root /nfs/homes/sel-jama/Desktop/THE_REQUEST/;
+        cgi php /usr/bin/php-cgi;
+        cgi py /usr/bin/python3;
+        return http://127.0.0.1:50000:/anotherLocation;
+        # index test;
+        # index test2 index.php script.py index.html;
+        index test3.html;
+    }
 
-# server {
-#     listen 127.0.0.1:10000;
-#     server_name server1;
-#     client_max_body_size 10000000;
-#     location / {
-#         upload on;
-#         upload_path /nfs/homes/sel-jama/Desktop/Webserv/upload;
-#         autoindex on;
-#         http_methods POST GET DELETE;
-#         root /nfs/homes/sel-jama/Desktop/Webserv;
-#         cgi php /usr/bin/php-cgi;
-#         cgi py /usr/bin/python3;
-#         #return https://www.youtube.com;
-#         # index test2 index.php script.py index.html;
-#         # index test3;
-#     }
-
-#     location /images {
-#         root /nfs/homes/yboucha/Downloads/web/;
-#         autoindex on;
-#         http_methods  GET;
-#         index s.html;
-#     }
-#     error_page 404 /nfs/homes/sel-jama/Desktop/Webserv/error_page/404.html;
-# }
-
-# server {
-#     listen 127.0.0.1:10000;
-#     server_name server;
-#     client_max_body_size 10000000;
-#     location / {
-#         upload on;
-#         upload_path /Users/yboucha/Desktop/web/upload;
-#         autoindex on;
-#         http_methods POST;
-#         http_methods POST GET;
-#         root /Users/yboucha/Desktop/web;
-#         cgi php /usr/bin/php-cgi;
-#         cgi py /usr/bin/python3;
-#         return 301 http://127.0.0.1:50000:/anotherLocation;
-#         index test;
-#         index test2 index.php script.py index.html;
-#         index test3;
-#     }
-
-#     location /images {
-#         root /Users/yboucha/Desktop/web;
-#         autoindex off;
-#         http_methods  GET;
-#         index index.html;
-#     }
-#         error_page 404 404.html;
-# }
+    location /images {
+        root /Users/yboucha/Desktop/web;
+        autoindex off;
+        http_methods  GET;
+        index index.html;
+    }
+        error_page 404 404.html;
+}
