commited  with vedeos

--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -25,7 +25,7 @@ server {
         http_methods  GET POST DELETE;
         index s.html;
     }
-    error_page 404 /nfs/homes/sel-jama/Desktop/THE_REQUEST/error_pages/404.html;
+    # error_page 404 /nfs/homes/sel-jama/Desktop/THE_REQUEST/error_pages/404.html;
 }
 
 
