--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -1,7 +1,7 @@
 server {
     listen 127.0.0.1:10000;
-    server_name server1;
-    client_max_body_size 10000000;
+    server_name http::/example.com/;
+    client_max_body_size 2000000000;
     location / {
         upload on;
         upload_path /nfs/homes/sel-jama/Desktop/THE_REQUEST/upload;
@@ -10,9 +10,10 @@ server {
         root /nfs/homes/sel-jama/Desktop/THE_REQUEST/;
         cgi php /usr/bin/php-cgi;
         cgi py /usr/bin/python3;
-        #return https://www.youtube.com;
+        # return https://www.youtube.com;
+        # return /abde;
         # index index.php script.py index.html;
-        # index index.html index.htm;
+        # index index.html;
         # index test1.html;
         # return abde;
     }
@@ -23,9 +24,10 @@ server {
         root /nfs/homes/sel-jama/;
         autoindex on;
         http_methods  GET POST DELETE;
+        index index.php script.py index.html;
         index s.html;
     }
-    # error_page 404 /nfs/homes/sel-jama/Desktop/THE_REQUEST/error_pages/404.html;
+    # error_page 404 /nfs/homes/sel-jama/Desktop/THE_REQUEST/myroot/404.html;
 }
 
 
@@ -41,7 +43,7 @@ server {
 #         root /nfs/homes/sel-jama/Desktop/THE_REQUEST/;
 #         cgi php /usr/bin/php-cgi;
 #         cgi py /usr/bin/python3;
-#         #return https://www.youtube.com;
+#         return https://www.youtube.com;
 #         # index test2 index.php script.py index.html;
 #         index test2.html;
 #     }
