--- a/sock2/configfiles/config2.conf
+++ b/sock2/configfiles/config2.conf
@@ -1,33 +1,29 @@
 server {
     listen 127.0.0.1:10000;
-    server_name http::/example.com/;
-    client_max_body_size 2000000000;
+    server_name server;
+    client_max_body_size 800000000;
     location / {
         upload on;
-        upload_path /nfs/homes/sel-jama/Desktop/THE_REQUEST/upload;
+        upload_path /nfs/homes/web/upload;
         autoindex on;
         http_methods GET POST DELETE;
-        root /nfs/homes/sel-jama/Desktop/THE_REQUEST/;
+        root /nfs/homes/sel-jama/web/;
         cgi php /usr/bin/php-cgi;
         cgi py /usr/bin/python3;
         # return https://www.youtube.com;
-        # return /abde;
         # index index.php script.py index.html;
-        # index index.html;
-        # index test1.html;
-        # return abde;
     }
 
-    location /abde {
+    location /other {
         upload on;
-        upload_path /nfs/homes/sel-jama/upload;
-        root /nfs/homes/sel-jama/;
+        upload_path /nfs/homes/web/upload;
+        root /nfs/homes/yboucha/;
         autoindex on;
         http_methods  GET POST DELETE;
         index index.php script.py index.html;
         index s.html;
     }
-    # error_page 404 /nfs/homes/sel-jama/Desktop/THE_REQUEST/myroot/404.html;
+    # error_page 404 /nfs/homes/yboucha/Desktop/v1/myroot/404.html;
 }
 
 
@@ -37,10 +33,10 @@ server {
 #     client_max_body_size 10000000;
 #     location / {
 #         upload on;
-#         upload_path /nfs/homes/sel-jama/Desktop/Webserv/upload;
+#         upload_path /nfs/homes/web/upload;
 #         autoindex on;
 #         http_methods POST GET DELETE;
-#         root /nfs/homes/sel-jama/Desktop/THE_REQUEST/;
+#         root /nfs/homes/web/;
 #         cgi php /usr/bin/php-cgi;
 #         cgi py /usr/bin/python3;
 #         return https://www.youtube.com;
@@ -49,12 +45,12 @@ server {
 #     }
 
 #     location /images {
-#         root /nfs/homes/yboucha/Downloads/web/;
+#         root /nfs/homes/web/;
 #         autoindex on;
 #         http_methods  GET;
 #         index s.html;
 #     }
-#     error_page 404 /nfs/homes/sel-jama/Desktop/Webserv/error_page/404.html;
+#     error_page 404 /nfs/homes/yboucha/Desktop/Webserv/error_page/404.html;
 # }
 
 # server {
@@ -63,11 +59,11 @@ server {
 #     client_max_body_size 10000000;
 #     location / {
 #         upload on;
-#         upload_path /Users/sel-jama/Desktop/THE_REQUEST/upload;
+#         upload_path /Users/home/web/upload;
 #         autoindex on;
 #         http_methods POST;
 #         http_methods POST GET;
-#         root /nfs/homes/sel-jama/Desktop/THE_REQUEST/;
+#         root /nfs/homes/web/;
 #         cgi php /usr/bin/php-cgi;
 #         cgi py /usr/bin/python3;
 #         return http://127.0.0.1:50000:/anotherLocation;
@@ -77,7 +73,7 @@ server {
 #     }
 
 #     location /images {
-#         root /Users/yboucha/Desktop/web;
+#         root /Users/home/web/;
 #         autoindex off;
 #         http_methods  GET;
 #         index index.html;
